--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,30 +139,23 @@ section{
     margin-bottom: 15px;
 }
 
-.intro{
-    text-align: center;
-}
-
 .intro p{
     line-height: 1.7;
     color: #39a6b2;
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
-}
-
-.steps{
     text-align: center;
-    background: #fce138;
 }
 
 .section-title{
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
     border-bottom: 3px solid;
-    display: inline-block;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
 }
 
 .primary-border{
@@ -171,6 +164,10 @@ section{
 
 .secondary-border{
     border-color: #39a6b2;
+}
+
+.steps{
+    background: #fce138;
 }
 
 .steps div{
@@ -197,7 +194,6 @@ section{
 }
 
 .trainers{
-    text-align: center;
 }
 
 .trainer{
@@ -243,8 +239,11 @@ section{
     text-align: right;
 }
 
+.flex-row{
+    display: flex;
+}
+
 .contact{
-    text-align: center;
     background-color: #024e76;
 }
 
