--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,9 @@
+:root{
+    --primary-color: #fce138;
+    --secondary-color: #024e76;
+    --tertiary-color: #39a6b2;
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -5,13 +11,13 @@
 }
 
 body{
-    color: #39a6b2;
+    color: var(--tertiary-color);
     font-family: Helvetica, Arial, sans-serif;
 }
 
 header{
     padding: 20px 35px;
-    background-color: #39a6b2;
+    background-color: var(--tertiary-color);
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -23,19 +29,20 @@ header{
     background-position: center;
     background-attachment: fixed;
     background-position: 80%;
+    z-index: 9999;
 }
 
 header h1{
     font-weight: bold;
     font-size: 36px;
-    color: #fce138;
+    color: var(--primary-color);
     margin: 0;
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 header a{
     text-decoration: none;
-    color: #fce138;
+    color: var(--primary-color);
 }
 
 header nav{
@@ -58,14 +65,14 @@ header nav ul li a{
 }
 
 header nav ul li a:hover{
-    background: #fce138;
-    color: #024e76;
+    background: var(--primary-color);
+    color: var(--secondary-color);
     border-radius: 15px;
     text-shadow: none;
 }
 
 footer{
-    background: #fce138;
+    background: var(--primary-color);
     width: 100%;
     padding: 40px 35px;
     display: flex;
@@ -74,7 +81,7 @@ footer{
 }
 
 footer h2{
-    color: #024e76;
+    color: var(--secondary-color);
     font-size: 30px;
     margin: 0;
 }
@@ -85,7 +92,7 @@ footer div{
 }
 
 footer a{
-    color: #024e76;
+    color: var(--secondary-color);
 }
 
 section{
@@ -116,15 +123,15 @@ section{
 .hero-cta h2{
     font-style: italic;
     font-size: 55px;
-    color: #fce138;
+    color: var(--primary-color);
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .hero-form{
-    color: #024e76;
+    color: var(--secondary-color);
     background-color: rgba(252, 225, 56, 0.8);
     padding: 20px;
-    border: solid 3px #024e76;
+    border: solid 3px var(--secondary-color);
     width: 40%;
     margin: 3.5%;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
@@ -145,8 +152,8 @@ section{
 }
 
 .hero-form button{
-    color: #fce138;
-    background-color: #024e76;
+    color: var(--primary-color);
+    background-color: var(--secondary-color);
     padding: 10px 20px;
     font-size: 16px;
     border: none;
@@ -154,15 +161,77 @@ section{
 }
 
 .hero-form button:hover{
-    background-color: #39a6b2;
+    background-color: var(--tertiary-color);
+}
+
+.checkbox-wrapper input,
+.radio-wrapper input{
+    opacity: 0;
+}
+
+.checkbox-wrapper label,
+.radio-wrapper label{
+    position: relative;
+    left: 10px;
+    margin: 10px;
+    line-height: 1.6;
+}
+
+.checkbox-wrapper label::before,
+.radio-wrapper label::before{
+    content: "";
+    height: 20px;
+    width: 20px;
+    background: rgba(255, 255, 255, 0.75);
+    border: 1px solid var(--secondary-color);
+    position: absolute;
+    top: -4px;
+    left: -30px;
+}
+
+.radio-wrapper label::before{
+    border-radius: 50%;
+}
+
+.radio-wrapper label::after{
+    content: "";
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-image: radial-gradient(circle, var(--tertiary-color), var(--secondary-color));
+    position: absolute;
+    left: -29px;
+    top: -3px;
+}
+
+.checkbox-wrapper label::after{
+    content: "";
+    height: 6px;
+    width: 14px;
+    border-left: 2px solid var(--secondary-color);
+    border-bottom: 2px solid var(--secondary-color);
+    position: absolute;
+    left: -26px;
+    top: 1px;
+    transform: rotate(-58deg);
+}
+
+.checkbox-wrapper input + label::after,
+.radio-wrapper input + label::after{
+    content: none;
+}
+
+.checkbox-wrapper input:checked + label::after,
+.radio-wrapper input:checked + label::after{
+    content: "";
 }
 
 .form-input{
     display: block;
-    border: 1px solid #024e76;
+    border: 1px solid var(--secondary-color);
     padding: 7px 15px;
     font-size: 16px;
-    color: #024e76;
+    color: var(--secondary-color);
     width: 100%;
     margin-bottom: 15px;
     border-radius: 10px;
@@ -176,7 +245,7 @@ section{
 
 .intro p{
     line-height: 1.7;
-    color: #39a6b2;
+    color: var(--tertiary-color);
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
@@ -185,7 +254,7 @@ section{
 
 .section-title{
     font-size: 48px;
-    color: #024e76;
+    color: var(--secondary-color);
     border-bottom: 3px solid;
     padding-bottom: 20px;
     text-align: center;
@@ -194,15 +263,15 @@ section{
 }
 
 .primary-border{
-    border-color: #fce138;
+    border-color: var(--primary-color);
 }
 
 .secondary-border{
-    border-color: #39a6b2;
+    border-color: var(--tertiary-color);
 }
 
 .steps{
-    background: #fce138;
+    background: var(--primary-color);
 }
 
 .step{
@@ -213,15 +282,15 @@ section{
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
-    border-bottom: 1px solid #39a6b2;
+    border-bottom: 1px solid var(--tertiary-color);
 }
 
 .step:not(:last-child){
-    border-bottom: 1px solid #39a6b2;
+    border-bottom: 1px solid var(--tertiary-color);
 }
 
 .step h3{
-    color: #024e76;
+    color: var(--secondary-color);
     font-size: 46px;
     flex: 1 30%;
 }
@@ -249,11 +318,11 @@ section{
 .step-text h4{
     font-size: 26px;
     line-height: 1.5;
-    color: #024e76;
+    color: var(--secondary-color);
 }
 
 .step-text p{
-    color: #39a6b2;
+    color: var(--tertiary-color);
     font-size: 18px;
 }
 
@@ -267,8 +336,8 @@ section{
 
 .trainer{
     margin: 20px;
-    background: #024e76;
-    color: #fce138;
+    background: var(--secondary-color);
+    color: var(--primary-color);
     flex: 1;
 }
 
@@ -308,11 +377,11 @@ section{
 }
 
 .contact{
-    background-color: #024e76;
+    background-color: var(--secondary-color);
 }
 
 .contact h2{
-    color: #fce138;
+    color: var(--primary-color);
 }
 
 .contact-info{
@@ -335,11 +404,12 @@ section{
 }
 
 .contact-info h3{
-    color: #fce138;
+    color: var(--primary-color);
     font-size: 32px;
 }
 
-.contact-info p, .contact-info address{
+.contact-info p,
+.contact-info address{
     margin: 20px 0;
     line-height: 1.5;
     font-size: 16px;
@@ -347,15 +417,16 @@ section{
 }
 
 .contact a{
-    color: #fce138;
+    color: var(--primary-color);
 }
 
-.contact-form input, .contact-form textarea{
-    border: 1px solid #024e76;
+.contact-form input,
+.contact-form textarea{
+    border: 1px solid var(--secondary-color);
     display: block;
     padding: 7px 15px;
     font-size: 16px;
-    color: #024e76;
+    color: var(--secondary-color);
     width: 100%;
     margin-bottom: 15px;
     margin-top: 5px;
@@ -363,7 +434,8 @@ section{
     background-color: rgba(255, 255, 255, 0.75);
 }
 
-.contact-form input:focus, .contact-form textarea:focus{
+.contact-form input:focus,
+.contact-form textarea:focus{
     background-color: rgba(255, 255, 255, 1);
     outline: none;
 }
@@ -371,8 +443,8 @@ section{
 .contact-form button{
     width: 100%;
     border: none;
-    background: #fce138;
-    color: #024e76;
+    background: var(--primary-color);
+    color: var(--secondary-color);
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
@@ -380,8 +452,8 @@ section{
 }
 
 .contact-form button:hover{
-    color: #fce138;
-    background: #39a6b2;
+    color: var(--primary-color);
+    background: var(--tertiary-color);
 }
 
 /*smaller desktop*/
@@ -407,7 +479,8 @@ section{
         font-size: 20px;
     }
 
-    .hero-cta, .hero-form{
+    .hero-cta,
+    .hero-form{
         width: 100%;
     }
 
@@ -427,7 +500,8 @@ section{
         flex: 1 100%;
     }
 
-    footer h2, footer div{
+    footer h2,
+    footer div{
         text-align: center;
         width: 100%;
     }
